Style close button and ensure visibility of button

--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,7 @@ body {
 
 header {
   padding: 20px 30px;
+  height: 10vh;
   font-family: "Ms Madi";
   font-size: 50px;
 
@@ -46,6 +47,7 @@ header {
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 5px;
   justify-items: center;
+  align-content: center;
 }
 
 #logo {
